# book_recommender

./: .gitignore  .gitmodules  CMakeLists.txt  book.cpp  book.h  bookcollection.cpp  bookcollection.h  dummyrecommender.cpp  dummyrecommender.h  main.cpp  mainwindow.ui  recommender.cpp  recommender.h  userwindow.cpp  userwindow.h  userwindow.ui
.qt/: QtDeploySupport.cmake
collections/: collection.csv  collection1.csv  suppliercollection.csv  suppliercollection1.csv  usercollection1.csv
